[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rtsapi"]

[project]
name = "rts-api"
version = "0.1.0"
description = "Robotic Total Station API"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "requests>=2.32.3",
    "scipy>=1.15.1",
    "sqlalchemy>=2.0.36",
    "trajectopy>=2.2.3",
    "uvicorn>=0.34.0",
]


[project.scripts]
rtsapi = "main:main"
