[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web"]

[project]
name = "rts-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "dash-daq>=0.5.0",
    "gunicorn>=23.0.0",
    "numpy>=2.2.2",
    "pydantic>=2.10.5",
]

[project.scripts]
rtsdashboard = "main:main"
